tests/reject/vtMutatingMethodInstanceVar.emojic
🕊 🌼 🍇
  🖍🆕 text 🔡

  🆕 🍼 text 🔡 🍇🍉

  🖍❗️ 😣 🍇
    🔤Rabzmw🔤 ➡️ 🖍text
  🍉
🍉

🕊 🥭 🍇
  🖍🆕 flower 🌼

  🆕 🍇
    🆕🌼🆕 🔤Discovery🔤❗️ ➡️ 🖍flower
  🍉

  ❗️ 🥎 🍇
    😣 flower❗️
  🍉

  🖍❗️ ⚾️ 🍇
    😣 flower❗️
  🍉
🍉

🏁 🍇


🍉
